syntax = "proto3";
package DomainServices.CustomerService;
option csharp_namespace = "DomainServices.CustomerService.Contracts";

import "google/protobuf/wrappers.proto";
import "NullableGrpcDate.proto";

message NaturalPerson {
	
   string FirstName = 1;

   string LastName = 2;

   cis.types.NullableGrpcDate DateOfBirth = 3;

   string BirthNumber = 4;

   int32 GenderId = 5;

   string BirthName = 6;

   string PlaceOfBirth = 7;

   google.protobuf.Int32Value BirthCountryId = 8;

   repeated int32 CitizenshipCountriesId = 9;

   int32 MaritalStatusStateId = 10;
   
   google.protobuf.Int32Value DegreeBeforeId = 11;

   google.protobuf.Int32Value DegreeAfterId = 12;

   google.protobuf.BoolValue IsPoliticallyExposed = 13;

   int32 EducationLevelId = 14;

   bool IsBrSubscribed = 15;

   string KbRelationshipCode = 18;

   string Segment = 20;

   google.protobuf.BoolValue IsUSPerson = 21;

   NaturalPersonLegalCapacity LegalCapacity = 22;

   NaturalPersonTaxResidence TaxResidence = 23;

   google.protobuf.Int32Value ProfessionCategoryId = 24;
   google.protobuf.Int32Value ProfessionId = 25;
   google.protobuf.Int32Value NetMonthEarningAmountId = 26;
   google.protobuf.Int32Value NetMonthEarningTypeId = 27;
}

message NaturalPersonTaxResidence {
	cis.types.NullableGrpcDate ValidFrom = 1;
	repeated NaturalPersonResidenceCountry ResidenceCountries = 2;
}

message NaturalPersonResidenceCountry {
	google.protobuf.Int32Value CountryId = 1;
	google.protobuf.StringValue Tin = 2;
	google.protobuf.StringValue TinMissingReasonDescription = 3;
}

message NaturalPersonLegalCapacity {
	google.protobuf.Int32Value RestrictionTypeId = 1;

	cis.types.NullableGrpcDate RestrictionUntil = 2;
}

message NaturalPersonBasicInfo {
	
   string FirstName = 1;

   string LastName = 2;

   cis.types.NullableGrpcDate DateOfBirth = 3;

   string BirthNumber = 4;

   int32 GenderId = 5;
}

message NaturalPersonSearch {
	
   string FirstName = 1;

   string LastName = 2;

   cis.types.NullableGrpcDate DateOfBirth = 3;

   string BirthNumber = 4;
}