syntax = "proto3";
package DomainServices.HouseholdService;
option csharp_namespace = "DomainServices.HouseholdService.Contracts";

import "google/protobuf/wrappers.proto";

message HouseholdData {
    google.protobuf.Int32Value ChildrenUpToTenYearsCount = 1;
    
    google.protobuf.Int32Value ChildrenOverTenYearsCount = 2;
    
    google.protobuf.Int32Value PropertySettlementId = 3;

    google.protobuf.BoolValue AreBothPartnersDeptors = 4;

    google.protobuf.BoolValue AreCustomersPartners = 5;
}