syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";
import "GrpcAddress.proto";
import "NullableGrpcDate.proto";
import "NullableGrpcDecimal.proto";

message IncomeBaseData {
    cis.types.NullableGrpcDecimal Sum = 1;
    string CurrencyCode = 2;
}

message EmployerData {
    string Name = 1;
    string BirthNumber = 2;
    string Cin = 3;
    google.protobuf.Int32Value CountryId = 4;
}

message JobData {
    cis.types.NullableGrpcDecimal GrossAnnualIncome = 1;
    string JobDescription = 2;
    bool JobNoticePeriod = 3;
    bool JobTrialPeriod = 4;
    google.protobuf.Int32Value EmploymentTypeId = 5;
    cis.types.NullableGrpcDate CurrentWorkContractSince = 6;
    cis.types.NullableGrpcDate CurrentWorkContractTo = 7;
    cis.types.NullableGrpcDate FirstWorkContractSince = 8;
}

message WageDeductionData {
     cis.types.NullableGrpcDecimal DeductionDecision = 1;
     cis.types.NullableGrpcDecimal DeductionPayments = 2;
     cis.types.NullableGrpcDecimal DeductionOther = 3;
}

message IncomeConfirmationData {
    bool ConfirmationByCompany = 1;
    cis.types.NullableGrpcDate ConfirmationDate = 2;
    string ConfirmationPerson = 3;
    string ConfirmationContact = 4;
}

message IncomeDataEmployement {
    google.protobuf.Int32Value ForeignIncomeTypeId = 2;
    bool ProofOfIncomeToggle = 3;
    DomainServices.SalesArrangementService.EmployerData Employer = 4;
    DomainServices.SalesArrangementService.JobData Job = 5;
    bool WageDeductionToggle = 6;
    DomainServices.SalesArrangementService.WageDeductionData WageDeduction = 7;
    DomainServices.SalesArrangementService.IncomeConfirmationData IncomeConfirmation = 8;
}

message IncomeDataOther {
    google.protobuf.Int32Value IncomeOtherTypeId = 1;
}

message IncomeDataEntrepreneur {
    string Cin = 1;
    string BirthNumber = 2;
    google.protobuf.Int32Value CountryOfResidenceId = 3;
}